[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "bloomberg"
authors = [
  {name = "Patrick Schaffner", email = "patrick.schaffner@protonmail.ch"},
]
maintainers = [
  {name = "Patrick Schaffner", email = "patrick.schaffner@protonmail.ch"},
]
description = "Meta package for Bloomberg dependencies."
readme = "README.md"
license = {text = "MIT License"}
keywords = ["bloomberg", "blpapi", "blp", "xbbg"]
requires-python = ">=3.11"
dependencies = [
]
optional-dependencies.test = [
    "pytest",
    "pytest-cov",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "bloomberg.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["bloomberg*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
