[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "bloomberg"
dynamic = ["version"]
authors = [
  {name = "Patrick Schaffner", email = "patrick.schaffner@protonmail.ch"},
]
maintainers = [
  {name = "Patrick Schaffner", email = "patrick.schaffner@protonmail.ch"},
]
description = "Meta package for Bloomberg dependencies."
readme = "README.md"
license = {text = "MIT License"}
keywords = ["bloomberg", "blpapi", "blp", "xbbg"]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
blpapi = ["blpapi; sys_platform == 'win32'"]
xbbg = ["xbbg; sys_platform == 'win32'"]
blp = ["blp; sys_platform == 'win32'"]
all = [
    "blpapi; sys_platform == 'win32'",
    "xbbg; sys_platform == 'win32'",
    "blp; sys_platform == 'win32'",
]

[tool.setuptools.dynamic]
version = {file = "bloomberg/version.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = ["bloomberg*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
